--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.704</string>
-    <string name="version">Версія: 1.704</string>
+    <string name="version_code">1.705</string>
+    <string name="version">Версія: 1.705</string>
 
     <string name="app_name">Таксі Київ</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -152,6 +152,6 @@
     <string name="city">Місто</string>
     <string name="change_message">"Зміна бази адрес."</string>
     <string name="server_error_connected">Сервер не прийняв запит, наберіть операторів</string>
-    <string name="GDPR">Застосовується Загальний регламент захисту персональних даних (GDPR) ЄС. Виконуючи ці дії користувач погоджується с Правиламі конфедійціності та усвідомлює з якою метою збираються дані, а також те, чи введення інформації є добровільним або обовязковим для користування відповідною послугою.</string>
+    <string name="GDPR">Користувач погоджується с Правиламі конфедійціності  Загального регламенту захисту персональних даних (GDPR) ЄС та усвідомлює з що введення інформації про телефон є обовязковим для замовлеення таксі.</string>
     <string name="ok_gdpr">Погодитися</string>
 </resources>
