--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="version_code">1.704</string>
-    <string name="version">Версия: 1.704</string>
+    <string name="version_code">1.705</string>
+    <string name="version">Версия: 1.705</string>
 
     <string name="app_name">Такси Киев</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -152,7 +152,7 @@
     <string name="city">Город</string>
     <string name="change_message">"Смена базы адресов. "</string>
     <string name="server_error_connected">Сервер не принял запрос, наберите операторов</string>
-    <string name="GDPR">Применяется Общий регламент защиты персональных данных (GDPR) ЕС. Выполняя эти действия, пользователь соглашается с Правилами конфедиционности и осознает с какой целью собираются данные, а также то, является ли ввод информации добровольным или обязательным для пользования соответствующей услугой.</string>
+    <string name="GDPR">Пользователь соглашается с Правилами конфедиционности Общего регламента защиты персональных данных (GDPR) ЕС и осознает, что ввод информации о телефоне является обязательным для заказа такси.</string>
     <string name="ok_gdpr">Согласиться</string>
 
 </resources>
