--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.708</string>
-    <string name="version">Версія: 1.708</string>
+    <string name="version_code">1.709</string>
+    <string name="version">Версія: 1.709</string>
 
     <string name="app_name">Таксі Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -307,5 +307,6 @@
     <string name="gdpr1">Ми цінуємо вашу довірливість та прагнемо забезпечити надійний захист ваших особистих даних. Ця політика конфіденційності пояснює, як ми збираємо, використовуємо та захищаємо ваші особисті дані в рамках використання нашої програми.</string>
     <string name="gdpr2">Для забезпечення функціональності замовлення таксі у нашому додатку, ми збираємо та зберігаємо номери мобільних телефонів користувачів. Ці дані необхідні для зв\'язку з вами та забезпечення послуги замовлення таксі.</string>
     <string name="gdpr3">Використовуючи нашу програму та надаючи нам свої особисті дані, ви висловлюєте свою згоду на збір, використання та передачу цих даних відповідно до цієї політики конфіденційності. Ми докладаємо всіх необхідних заходів для забезпечення безпеки ваших особистих даних та запобігання несанкціонованому доступу до них. Наш додаток дотримується положень Загального регламенту захисту персональних даних (GDPR) Європейського Союзу щодо збору, використання та обробки особистих даних. Ви маєте право в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Використовуючи нашу програму, ви погоджуєтесь з умовами нашої політики конфіденційності. Ми залишаємо за собою право вносити зміни до цієї політики, про що ви будете повідомлені. Ви маєте право в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Якщо у вас є додаткові запитання або запити щодо вашої конфіденційності та даних, будь ласка, зв\'яжіться з нами за вказаною нижче контактною адресою.</string>
+    <string name="my_name">автор: Андрій Коржов</string>
 
 </resources>
