--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.710</string>
-    <string name="version">Версія: 1.710</string>
+    <string name="version_code">1.711</string>
+    <string name="version">Версія: 1.711</string>
 
     <string name="app_name">Таксі Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -291,7 +291,7 @@
     <string name="search_text">Пошук адреси</string>
     <string name="drag_marker">Для уточнення місцезнаходження пересувайте маркер</string>
     <string name="drag_marker_bottom">Натисніть на маркер та перемістіть його для уточнення розташування</string>
-    <string name="menu_city">Таксі міста </string>
+    <string name="menu_city">Замовлення міста </string>
     <string name="city_kyiv">Київ та області</string>
     <string name="city_dnipro">Дніпро</string>
     <string name="city_odessa">Одеса</string>
@@ -308,5 +308,4 @@
     <string name="gdpr2">Для забезпечення функціональності замовлення таксі у нашому додатку, ми збираємо та зберігаємо номери мобільних телефонів користувачів. Ці дані необхідні для зв\'язку з вами та забезпечення послуги замовлення таксі.</string>
     <string name="gdpr3">Використовуючи нашу програму та надаючи нам свої особисті дані, ви висловлюєте свою згоду на збір, використання та передачу цих даних відповідно до цієї політики конфіденційності. Ми докладаємо всіх необхідних заходів для забезпечення безпеки ваших особистих даних та запобігання несанкціонованому доступу до них. Наш додаток дотримується положень Загального регламенту захисту персональних даних (GDPR) Європейського Союзу щодо збору, використання та обробки особистих даних. Ви маєте право в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Використовуючи нашу програму, ви погоджуєтесь з умовами нашої політики конфіденційності. Ми залишаємо за собою право вносити зміни до цієї політики, про що ви будете повідомлені. Ви маєте право в будь-який час запросити доступ до ваших особистих даних, внести зміни або видалити їх з нашої бази даних. Для цього зв\'яжіться з нами за адресою taxi.easy.ua@gmail.com. Якщо у вас є додаткові запитання або запити щодо вашої конфіденційності та даних, будь ласка, зв\'яжіться з нами за вказаною нижче контактною адресою.</string>
     <string name="my_name">автор: Андрій Коржов</string>
-
 </resources>
