--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.711</string>
-    <string name="version">Версия: 1.711</string>
+    <string name="version_code">1.713</string>
+    <string name="version">Версия: 1.713</string>
 
     <string name="app_name">Такси Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -16,6 +16,7 @@
     <string name="nav_header_subtitle">Быстрые поездки по городам Украины</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Настройки</string>
+
     <string name="menu_maps">Карта</string>
     <string name="menu_home">По адресу</string>
     <string name="menu_gallery">Мои маршруты</string>
@@ -290,7 +291,7 @@
     <string name="search_text">Поиск адреса</string>
     <string name="drag_marker">Для уточнения местоположения передвигайте маркер</string>
     <string name="drag_marker_bottom">Нажмите на маркер и переместите его для уточнения местоположения</string>
-    <string name="menu_city">Заказ города </string>
+    <string name="menu_city">Заказ г.</string>
     <string name="city_kyiv">Киев и области</string>
     <string name="city_dnipro">Днепр</string>
     <string name="city_odessa">Одесса</string>
