--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.713</string>
-    <string name="version">Версия: 1.713</string>
+    <string name="version_code">1.714</string>
+    <string name="version">Версия: 1.714</string>
 
     <string name="app_name">Такси Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -287,7 +287,7 @@
     <string name="house_vis_mes">укажите номер дома</string>
     <string name="address_on_map">определить по карте</string>
     <string name="address_take">применить</string>
-    <string name="main_page">Главная</string>
+    <string name="main_page">Заказ</string>
     <string name="search_text">Поиск адреса</string>
     <string name="drag_marker">Для уточнения местоположения передвигайте маркер</string>
     <string name="drag_marker_bottom">Нажмите на маркер и переместите его для уточнения местоположения</string>
@@ -307,5 +307,7 @@
     <string name="gdpr1">Мы ценим вашу доверчивость и стремимся обеспечить надежную защиту ваших личных данных. Эта политика конфиденциальности объясняет, как мы собираем, используем и защищаем ваши личные данные в рамках использования нашей программы.</string>
     <string name="gdpr2">Для обеспечения функциональности заказа такси в нашем приложении мы собираем и храним номера мобильных телефонов пользователей. Эти данные необходимы для связи с вами и предоставления услуги заказа такси.</string>
     <string name="gdpr3">Используя нашу программу и предоставляя нам свои личные данные, вы выражаете свое согласие на сбор, использование и передачу данных в соответствии с этой политикой конфиденциальности. Мы прилагаем все необходимые меры для обеспечения безопасности ваших личных данных и предотвращения несанкционированного доступа к ним. Наше приложение придерживается положений Общего регламента защиты персональных данных (GDPR) Европейского Союза по сбору, использованию и обработке личных данных. Вы вправе в любое время запросить доступ к вашим личным данным, внести изменения или удалить их из нашей базы данных. Для этого свяжитесь с нами по адресу taxi.easy.ua@gmail.com. Используя нашу программу, вы согласны с условиями нашей политики конфиденциальности. Мы оставляем за собой право вносить изменения в эту политику, о чем вы будете уведомлены. Вы вправе в любое время запросить доступ к вашим личным данным, внести изменения или удалить их из нашей базы данных. Для этого свяжитесь с нами по адресу taxi.easy.ua@gmail.com. Если у вас есть дополнительные вопросы или запросы относительно конфиденциальности и данных, пожалуйста, свяжитесь с нами по указанному ниже контактному адресу.</string>
-    <string name="my_name">автор: Андрей Коржов</string>
+    <string name="my_name">Андрей Коржов</string>
+    <string name="conf">Конфеденциальность</string>
+    <string name="author_about">Об авторе</string>
 </resources>
